--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,29 @@
 # =============================================================================
 # Development Database Toggle
 # =============================================================================
-# Set to "true" to use production PlanetScale database in development mode.
+# Set to "true" to use production Fly Managed Postgres database in development mode.
 # This is useful for testing against real production data without code changes.
 #
 # WARNING: Use with caution! All database operations will affect PRODUCTION.
 # Never commit with USE_PROD_DB=true - use temporarily via command line instead:
 #   USE_PROD_DB=true mix phx.server
 #
+# Prerequisites for USE_PROD_DB:
+#   1. Set DATABASE_URL and DATABASE_DIRECT_URL below
+#   2. Either: Start fly proxy: fly proxy 5433:5432 -a eventasaurus-db
+#   3. Or: Use WireGuard VPN: fly wireguard create
+#
 # USE_PROD_DB=false
 
 # =============================================================================
-# Database Configuration (PlanetScale PostgreSQL)
+# Database Configuration (Fly Managed Postgres)
 # =============================================================================
-# PlanetScale is the primary database provider
-# Set PLANETSCALE_DATABASE_HOST to enable PlanetScale (takes precedence over Supabase)
-# These credentials are used in production, and in development when USE_PROD_DB=true
+# Fly MPG is the primary database provider
+# These are only used when USE_PROD_DB=true in development
+# Get values from: fly secrets list -a eventasaurus
 
-PLANETSCALE_DATABASE_HOST=""              # e.g., "eu-central-2.pg.psdb.cloud"
-PLANETSCALE_DATABASE="postgres"           # Database name
-PLANETSCALE_DATABASE_USERNAME=""          # e.g., "pscale_api_xxx.yyy"
-PLANETSCALE_DATABASE_PASSWORD=""          # e.g., "pscale_pw_xxx"
-PLANETSCALE_DATABASE_PORT=5432            # Direct connection (Oban, migrations)
-PLANETSCALE_PG_BOUNCER_PORT=6432          # Pooled connection (web requests)
+DATABASE_URL=""                           # PgBouncer pooled connection URL
+DATABASE_DIRECT_URL=""                    # Direct connection URL (for migrations)
 
 # =============================================================================
 # API Keys (Required to enable respective provider)
