--- a/ios/Eventasaurus/project.yml
+++ b/ios/Eventasaurus/project.yml
@@ -32,6 +32,7 @@ targets:
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         ASSETCATALOG_COMPILER_GLOBAL_ACCENT_COLOR_NAME: AccentColor
         DEVELOPMENT_ASSET_PATHS: "\"Eventasaurus/Preview Content\""
+        INFOPLIST_KEY_NSLocationWhenInUseUsageDescription: "Eventasaurus uses your location to find events near you."
     dependencies:
       - package: Clerk
         product: ClerkKit
