--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -28,11 +28,16 @@ reviews:
     - "lib/**/*.heex"
     - "test/**/*.exs"
     - "priv/repo/migrations/**/*.exs"
+    - "ios/**/*.swift"
+    - "ios/**/project.yml"
     - "!**/*.lock"
     - "!**/deps/**"
     - "!**/node_modules/**"
     - "!**/_build/**"
     - "!**/priv/static/assets/**"
+    - "!**/*.xcodeproj/**"
+    - "!**/DerivedData/**"
+    - "!**/xcuserdata/**"
 
   # Path-based review instructions
   path_instructions:
@@ -52,6 +57,15 @@ reviews:
         - Proper refresh handler implementation
         - Repo.replica() usage for read queries
 
+    - path: "ios/**/*.swift"
+      instructions: |
+        Review Swift/SwiftUI code for:
+        - Proper @State/@Observable usage and ownership
+        - Async/await patterns (no blocking main thread)
+        - Memory management (retain cycles in closures)
+        - SwiftUI layout best practices (avoid .fill overflow without clipping)
+        - Clerk iOS SDK API correctness (auth.getToken(), auth.signOut())
+
     - path: "test/**"
       instructions: |
         Review tests for:
@@ -69,4 +83,5 @@ tone_instructions: |
   - Security vulnerabilities
   - Performance issues
   - Elixir/Phoenix best practices
+  - Swift/SwiftUI best practices
   - Pattern consistency with existing codebase
