--- a/ios/Eventasaurus/project.yml
+++ b/ios/Eventasaurus/project.yml
@@ -1,6 +1,6 @@
 name: Eventasaurus
 options:
-  bundleIdPrefix: com.eventasaurus
+  bundleIdPrefix: com.wombie
   deploymentTarget:
     iOS: "17.0"
   xcodeVersion: "16.0"
@@ -19,7 +19,9 @@ targets:
       - path: Eventasaurus
     settings:
       base:
-        PRODUCT_BUNDLE_IDENTIFIER: com.eventasaurus.ios
+        PRODUCT_BUNDLE_IDENTIFIER: com.wombie.app
+        DEVELOPMENT_TEAM: SG49J63DUY
+        CODE_SIGN_STYLE: Automatic
         MARKETING_VERSION: "1.0.0"
         CURRENT_PROJECT_VERSION: "1"
         GENERATE_INFOPLIST_FILE: YES
@@ -32,7 +34,7 @@ targets:
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         ASSETCATALOG_COMPILER_GLOBAL_ACCENT_COLOR_NAME: AccentColor
         DEVELOPMENT_ASSET_PATHS: "\"Eventasaurus/Preview Content\""
-        INFOPLIST_KEY_NSLocationWhenInUseUsageDescription: "Eventasaurus uses your location to find events near you."
+        INFOPLIST_KEY_NSLocationWhenInUseUsageDescription: "Wombie uses your location to find events near you."
     dependencies:
       - package: Clerk
         product: ClerkKit
