--- a/ios/Eventasaurus/project.yml
+++ b/ios/Eventasaurus/project.yml
@@ -6,6 +6,10 @@ options:
   xcodeVersion: "16.0"
   generateEmptyDirectories: true
 
+configFiles:
+  Debug: Configs/Debug.xcconfig
+  Release: Configs/Release.xcconfig
+
 packages:
   Clerk:
     url: https://github.com/clerk/clerk-ios
@@ -17,6 +21,27 @@ targets:
     platform: iOS
     sources:
       - path: Eventasaurus
+    info:
+      path: Eventasaurus/Info.plist
+      properties:
+        UIApplicationSceneManifest:
+          UIApplicationSupportsMultipleScenes: false
+        UIApplicationSupportsIndirectInputEvents: true
+        UILaunchScreen: {}
+        UISupportedInterfaceOrientations:
+          - UIInterfaceOrientationPortrait
+          - UIInterfaceOrientationLandscapeLeft
+          - UIInterfaceOrientationLandscapeRight
+        UISupportedInterfaceOrientations~ipad:
+          - UIInterfaceOrientationPortrait
+          - UIInterfaceOrientationPortraitUpsideDown
+          - UIInterfaceOrientationLandscapeLeft
+          - UIInterfaceOrientationLandscapeRight
+        NSLocationWhenInUseUsageDescription: "Wombie uses your location to find events near you."
+        APIBaseURL: $(API_BASE_URL)
+        APIBaseURLProd: $(API_BASE_URL_PROD)
+        ClerkPublishableKey: $(CLERK_PUBLISHABLE_KEY)
+        ClerkPublishableKeyProd: $(CLERK_PUBLISHABLE_KEY_PROD)
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.wombie.app
@@ -24,17 +49,10 @@ targets:
         CODE_SIGN_STYLE: Automatic
         MARKETING_VERSION: "1.0.0"
         CURRENT_PROJECT_VERSION: "1"
-        GENERATE_INFOPLIST_FILE: YES
-        INFOPLIST_KEY_UIApplicationSceneManifest_Generation: YES
-        INFOPLIST_KEY_UIApplicationSupportsIndirectInputEvents: YES
-        INFOPLIST_KEY_UILaunchScreen_Generation: YES
-        INFOPLIST_KEY_UISupportedInterfaceOrientations_iPad: "UIInterfaceOrientationPortrait UIInterfaceOrientationPortraitUpsideDown UIInterfaceOrientationLandscapeLeft UIInterfaceOrientationLandscapeRight"
-        INFOPLIST_KEY_UISupportedInterfaceOrientations_iPhone: "UIInterfaceOrientationPortrait UIInterfaceOrientationLandscapeLeft UIInterfaceOrientationLandscapeRight"
         SWIFT_EMIT_LOC_STRINGS: YES
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         ASSETCATALOG_COMPILER_GLOBAL_ACCENT_COLOR_NAME: AccentColor
         DEVELOPMENT_ASSET_PATHS: "\"Eventasaurus/Preview Content\""
-        INFOPLIST_KEY_NSLocationWhenInUseUsageDescription: "Wombie uses your location to find events near you."
     dependencies:
       - package: Clerk
         product: ClerkKit
