--- a/ios/Eventasaurus/project.yml
+++ b/ios/Eventasaurus/project.yml
@@ -38,6 +38,8 @@ targets:
           - UIInterfaceOrientationLandscapeLeft
           - UIInterfaceOrientationLandscapeRight
         NSLocationWhenInUseUsageDescription: "Wombie uses your location to find events near you."
+        CFBundleDisplayName: Wombie
+        ITSAppUsesNonExemptEncryption: false
         APIBaseURL: $(API_BASE_URL)
         APIBaseURLProd: $(API_BASE_URL_PROD)
         ClerkPublishableKey: $(CLERK_PUBLISHABLE_KEY)
@@ -45,6 +47,7 @@ targets:
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.wombie.app
+        CODE_SIGN_ENTITLEMENTS: Eventasaurus/Eventasaurus.entitlements
         DEVELOPMENT_TEAM: SG49J63DUY
         CODE_SIGN_STYLE: Automatic
         MARKETING_VERSION: "1.0.0"
